--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["Sam Liu"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Hello Cloudflare"
+title = "ontouchstart.pages.dev"
