--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "ontouchstart.pages.dev"
+[preprocessor]
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+[output]
+[output.html]
+additional-js =["mermaid.min.js", "mermaid-init.js"]
