--- a/book.toml
+++ b/book.toml
@@ -13,3 +13,4 @@ command = "mdbook-mermaid"
 [output]
 [output.html]
 additional-js =["mermaid.min.js", "mermaid-init.js"]
+git-repository-url = "https://github.com/ontouchstart/cloudflare-page"
