--- a/book.toml
+++ b/book.toml
@@ -5,6 +5,9 @@ multilingual = false
 src = "src"
 title = "ontouchstart.pages.dev"
 
+[build]
+build-dir = "docs"
+
 [output]
 [output.html]
 git-repository-url = "https://github.com/ontouchstart/cloudflare-page"
